frther addition to html and css

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
                   <li><a class="dropdown-item" href="#">Projects</a></li>
                   <li><a class="dropdown-item" href="#">Skills</a></li>
-                  <li><hr class="dropdown-divider"></li>
+                  <!--<li><hr class="dropdown-divider"></li>-->
                   <li><a class="dropdown-item" href="#">Services</a></li>
                   <li><a class="dropdown-item" href="#">Contact</a></li>
                 </ul>
@@ -51,6 +51,9 @@
     </nav>
 
       <!--hero-section-->
+      <div class="container-fluid">
+        ...
+      </div>
 
 
 
