--- a/index.html
+++ b/index.html
@@ -52,14 +52,11 @@
 
       <!--hero-section-->
 
-    <div class="card text-center">
-        <div class="card-header">
-          Featured
-        </div>
+    <div class="hero-banner text-center" id="About">
         <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
+          <h5 class="card-title">About</h5>
           <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-primary">See More</a>
         </div>
         <div class="card-footer text-muted">
           2 days ago
