continue to improve html and css files

--- a/index.html
+++ b/index.html
@@ -50,71 +50,77 @@
         </div>
     </nav>
 
-      <!--hero-section-->
-
-    <div class="hero-banner text-center" id="About">
-        <div class="card-body">
-          <h5 class="card-title">About</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">See More</a>
-        </div>
-        <div class="card-footer text-muted">
-          2 days ago
-        </div>
+      <!--Jumbotron/Page highlight---summary-->
+  
+      <div class="jumbotron">
+        <h1>Portifolio</h1>
+        <p class="jumbotron-paragraph">Using the connectivity to build and share climate positive initiatives through engineering with people at the heart of the solutions</p>
       </div>
 
-
-      <!--Projects-->
-      <div class="container-fluid">
-
+      <!----Projects-->
+      <div class="cards">
+        <h2 class="section-heading">Projects</h2>
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
               <div class="card h-100">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="https://placehold.co/100x100" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Project 1</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
                 <div class="card-footer">
+                  <a href="#" class="btn btn-primary">See More</a>
                   <small class="text-muted">Last updated 3 mins ago</small>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="https://placehold.co/100x100" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Project 2</h5>
                   <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                 </div>
                 <div class="card-footer">
+                  <a href="#" class="btn btn-primary">See More</a>
                   <small class="text-muted">Last updated 3 mins ago</small>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="https://placehold.co/100x100" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Project 3</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                 </div>
                 <div class="card-footer">
+                  <a href="#" class="btn btn-primary">See More</a>
                   <small class="text-muted">Last updated 3 mins ago</small>
                 </div>
               </div>
             </div>
           </div>
-
-
-
-
       </div>
 
+      <div class="d-md-grid4">
+      <!-- Skills section -->
+        <div class="Skills">
+          <h2>Skills</h2>
+        </div>
 
+      <!-- Services Section -->
+        <div class="Services">
+          <h2>Services</h2>
+        </div>
 
-      <!--Jumbotron -->
+      <!-- Contact Details -->
+        <div class="Contact">
+          <h2>Contact</h2>
+        </div>
+      </div>
 
+    
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" 
     integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
